--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "expo": "~51.0.22",
     "expo-application": "~5.9.1",
     "expo-auth-session": "~5.5.2",
@@ -27,6 +28,7 @@
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
@@ -39,12 +41,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "yup": "^1.4.0",
-    "expo-image-picker": "~15.0.7"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
