--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
